# IS-2020-prog-2-sem

homework 1/: geometry.cpp  geometry.h  main.cpp
homework1/: NOTE  geometry.cpp  geometry.h  main.cpp
homework2/: main.cpp  polynomial.cpp  polynomial.h
homework3/: CMakeLists.txt  Timetable.xml  main.cpp
homework4/: CMakeLists.txt  predicate.hpp
homework5/: CMakeLists.txt  CircularBuffer.hpp  main.cpp
homework6/: Algorithm.hpp  CMakeLists.txt  Controls.hpp  Cube.hpp  Face.hpp  Initialize.hpp  Interface.hpp  main.cpp
